<resources>
    <string name="app_name">Question</string>
    <string name="admin">admin</string>
    <string name="employee">embloyee</string>
    <string name="login">LogIn</string>
    <string name="btLogin">Login</string>
    <string name="etPasswordHint">Password..</string>
    <string name="etEmailHint">Email</string>
    <string name="etNameHint">Username just in first login</string>
    <string name="newQuestion">new Question</string>
    <string name="listAllQues">list All Question</string>
    <string name="users">List Users</string>
    <string name="save">Save</string>
    <string name="errorPass">Error Password</string>
    <string name="emptyShortQuestion">Should Write Question from 12 letter at less</string>
    <string name="emptyAnswer">Should Write Answer.2 answer at less</string>
    <string name="emptyCorrectAnswer">Should have 1 correct answer.at less</string>
    <string name="saveQuestionAndAnswersSuccessful">Save Successful</string>
    <string name="saveQuestionAndAnswersFailed">Save Failed</string>
    <string name="noQuestion">No Question</string>
    <string name="emailEmpty">You have To Enter Your Email</string>
    <string name="emailName">You have To Enter Your Name</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="choiceAtLessOneAnswer">Choice At less one answer</string>
    <string name="result">Result</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="emptyQuestionDB">No Question In yet..</string>
    <string name="noMark">No Mark Yet</string>


    <string-array name="numberOptionAnswer">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>

