<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="@dimen/titleLarge"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <RadioGroup
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@id/rbgADminEmbloyee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@id/rbAdmin"
                android:text="@string/admin"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@id/rbEmbloyee"
                android:text="@string/employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

</LinearLayout>