<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_gravity="center_horizontal"
            android:text="@string/newQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/buttonSaveNewQuestion" />

        <Button
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/adminOPtionButtonMargin"
            android:text="@string/listAllQues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/buttonListAllQues" />

        <Button
            android:layout_gravity="center_horizontal"
            android:text="@string/users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/buttonListAllUsers" />
    </LinearLayout>
</FrameLayout>