<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.capps.question.MainActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/titleLarge"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@id/rbgADminEmbloyee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@id/rbAdmin"
                android:text="@string/admin"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@id/rbEmbloyee"
                android:text="@string/employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </LinearLayout>

    <FrameLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_alignParentBottom="true"
        android:id="@id/buttonLogin"
        android:text="@string/btLogin"
        android:textSize="@dimen/ButtonTextSize"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>
